[gd_scene load_steps=47 format=3 uid="uid://1mgi5w8s5qis"]

[ext_resource type="Script" uid="uid://pfogwsgb4x42" path="res://src/ui/ui.gd" id="1_u7n8c"]
[ext_resource type="PackedScene" uid="uid://2ncdnl1mq64u" path="res://src/ui/menus/main_menu/main_menu.tscn" id="2_f5cxw"]
[ext_resource type="Texture2D" uid="uid://crhxdcupst2hu" path="res://assets/sprites/healthbar.png" id="3_1mh4k"]
[ext_resource type="AudioStream" uid="uid://dcu1systql3f4" path="res://assets/sfx/button_click.wav" id="3_aac20"]
[ext_resource type="Texture2D" uid="uid://pjyib08moymi" path="res://assets/sprites/inventory.png" id="3_j4riv"]
[ext_resource type="AudioStream" uid="uid://coni5ug0dw7a4" path="res://assets/soundtrack/level01.wav" id="3_t30i7"]
[ext_resource type="Texture2D" uid="uid://dxp7uaaaua14j" path="res://assets/sprites/healthbarHeart.png" id="4_l5owu"]
[ext_resource type="AudioStream" uid="uid://dlbcpewgjkmil" path="res://assets/soundtrack/level03.wav" id="4_t30i7"]
[ext_resource type="Texture2D" uid="uid://d2ciyc0r088ij" path="res://assets/sprites/weaponCharge.png" id="4_wwjrv"]
[ext_resource type="AudioStream" uid="uid://d3g4adni5rkjd" path="res://assets/soundtrack/intro.wav" id="6_t30i7"]
[ext_resource type="AudioStream" uid="uid://d152mxltg8qlr" path="res://assets/soundtrack/ending.wav" id="7_1mh4k"]
[ext_resource type="AudioStream" uid="uid://jfsf417ahgbo" path="res://assets/sfx/reward.wav" id="7_cx7gx"]
[ext_resource type="PackedScene" uid="uid://cabps4fn5kekx" path="res://src/ui/menus/button_menu.tscn" id="7_eofyr"]
[ext_resource type="FontFile" uid="uid://bglu7olgc4ysk" path="res://assets/font.ttf" id="8_1kq2p"]
[ext_resource type="AudioStream" uid="uid://dt7refnl2ei7g" path="res://assets/sfx/start_game.wav" id="9_t30i7"]
[ext_resource type="AudioStream" uid="uid://wdscujqfmwar" path="res://assets/sfx/alien_dead.wav" id="14_ri2wq"]
[ext_resource type="AudioStream" uid="uid://befb6akn7ncrd" path="res://assets/sfx/enemy_hit.wav" id="15_idipi"]
[ext_resource type="AudioStream" uid="uid://dowvdm7pqw8co" path="res://assets/sfx/pick_drop.wav" id="16_6s7ef"]
[ext_resource type="AudioStream" uid="uid://bbuxxt3jema3l" path="res://assets/sfx/player_noticed.wav" id="17_yo02o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gucsq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cx7gx"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(1, 1, 1, 0)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gucsq"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(1, 1, 1, 0)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1410065408
corner_radius_top_right = 1410065408
corner_radius_bottom_right = 1410065408
corner_radius_bottom_left = 1410065408
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjh2c"]
content_margin_left = 64.0
content_margin_top = 64.0
content_margin_right = 64.0
content_margin_bottom = 64.0
bg_color = Color(0, 0, 0, 0.207843)
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="Animation" id="Animation_idipi"]
resource_name = "RESET"
loop_mode = 1

[sub_resource type="Animation" id="Animation_yo02o"]
resource_name = "ending"
length = 67.61
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Songs")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_1mh4k")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_gucsq"]
resource_name = "level1_song"
length = 53.0
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Songs")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_t30i7")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_cx7gx"]
resource_name = "level2_song"
length = 59.0
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Songs")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_t30i7")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_t30i7"]
resource_name = "level3_song"
length = 74.0
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Songs")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_t30i7")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_1mh4k"]
resource_name = "main_theme"
length = 66.0
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Songs")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_t30i7")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dwhk"]
_data = {
&"RESET": SubResource("Animation_idipi"),
&"ending": SubResource("Animation_yo02o"),
&"level1_song": SubResource("Animation_gucsq"),
&"level2_song": SubResource("Animation_cx7gx"),
&"level3_song": SubResource("Animation_t30i7"),
&"main_theme": SubResource("Animation_1mh4k")
}

[sub_resource type="Animation" id="Animation_wwjrv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu/ContentPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainMenu:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HUD:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1kq2p"]
resource_name = "alien_hit"
length = 0.15
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("15_idipi")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_l5owu"]
resource_name = "button_clicked"
length = 0.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_cx7gx")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_ri2wq"]
resource_name = "button_hovered"
length = 0.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_aac20")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_eofyr"]
resource_name = "enemy_killed"
length = 0.6
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_ri2wq")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_2auc3"]
resource_name = "food_eaten"
length = 0.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("17_yo02o")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_5kva4"]
resource_name = "item_picked"
length = 0.3
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("16_6s7ef")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_6s7ef"]
resource_name = "start_game"
length = 2.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_t30i7")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_j4riv"]
resource_name = "transition_level1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu/ContentPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.554788, 0.96594),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainMenu:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HUD:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(4.59479, 0.615572),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ba7qp"]
resource_name = "reset_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu/ContentPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4riv"]
_data = {
&"RESET": SubResource("Animation_wwjrv"),
&"alien_hit": SubResource("Animation_1kq2p"),
&"button_clicked": SubResource("Animation_l5owu"),
&"button_hovered": SubResource("Animation_ri2wq"),
&"enemy_killed": SubResource("Animation_eofyr"),
&"food_eaten": SubResource("Animation_2auc3"),
&"item_picked": SubResource("Animation_5kva4"),
&"reset_game": SubResource("Animation_ba7qp"),
&"start_game": SubResource("Animation_6s7ef"),
&"transition_level1": SubResource("Animation_j4riv")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cx7gx"]
animation = &"level1_song"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1mh4k"]
animation = &"main_theme"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l5owu"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t30i7"]
xfade_time = 3.0
advance_mode = 2
advance_condition = &"is_level1"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ri2wq"]
states/End/position = Vector2(902, 100)
states/level1_song/node = SubResource("AnimationNodeAnimation_cx7gx")
states/level1_song/position = Vector2(529.333, 100)
states/main_theme/node = SubResource("AnimationNodeAnimation_1mh4k")
states/main_theme/position = Vector2(349.333, 99.3333)
transitions = ["Start", "main_theme", SubResource("AnimationNodeStateMachineTransition_l5owu"), "main_theme", "level1_song", SubResource("AnimationNodeStateMachineTransition_t30i7")]
graph_offset = Vector2(266.972, 0)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_u7n8c")

[node name="MainMenu" parent="." instance=ExtResource("2_f5cxw")]

[node name="HUD" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="PanelContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -403.0
offset_top = 44.0
offset_right = -65.0
offset_bottom = 177.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_gucsq")

[node name="Inventory" type="Sprite2D" parent="HUD/Inventory"]
z_index = -1
position = Vector2(178, 61)
scale = Vector2(0.34, 0.34)
texture = ExtResource("3_j4riv")

[node name="HBoxStatus" type="HBoxContainer" parent="HUD/Inventory"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeartsMargin" type="MarginContainer" parent="HUD/Inventory/HBoxStatus"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = -15
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HeartsPanel" type="PanelContainer" parent="HUD/Inventory/HBoxStatus/HeartsMargin"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cx7gx")

[node name="HBoxHearts" type="HBoxContainer" parent="HUD/Inventory/HBoxStatus/HeartsMargin/HeartsPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Item1" type="TextureRect" parent="HUD/Inventory/HBoxStatus/HeartsMargin/HeartsPanel/HBoxHearts"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_wwjrv")
expand_mode = 4

[node name="Item2" type="TextureRect" parent="HUD/Inventory/HBoxStatus/HeartsMargin/HeartsPanel/HBoxHearts"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="Item3" type="TextureRect" parent="HUD/Inventory/HBoxStatus/HeartsMargin/HeartsPanel/HBoxHearts"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="PlayerPanel" type="PanelContainer" parent="HUD/Inventory/HBoxStatus"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = SubResource("StyleBoxFlat_gucsq")

[node name="Status" type="PanelContainer" parent="HUD"]
layout_mode = 2
offset_left = 84.0
offset_top = 41.0
offset_right = 422.0
offset_bottom = 171.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_gucsq")

[node name="Healthbar" type="Sprite2D" parent="HUD/Status"]
z_index = -1
position = Vector2(148.662, 68)
scale = Vector2(0.330481, 0.368)
texture = ExtResource("3_1mh4k")

[node name="HBoxStatus" type="HBoxContainer" parent="HUD/Status"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayerPanel" type="PanelContainer" parent="HUD/Status/HBoxStatus"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = SubResource("StyleBoxFlat_gucsq")

[node name="HeartsMargin" type="MarginContainer" parent="HUD/Status/HBoxStatus"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = -15
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HeartsPanel" type="PanelContainer" parent="HUD/Status/HBoxStatus/HeartsMargin"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cx7gx")

[node name="HBoxHearts" type="HBoxContainer" parent="HUD/Status/HBoxStatus/HeartsMargin/HeartsPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Heart3" type="TextureRect" parent="HUD/Status/HBoxStatus/HeartsMargin/HeartsPanel/HBoxHearts"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_l5owu")
expand_mode = 4

[node name="Heart2" type="TextureRect" parent="HUD/Status/HBoxStatus/HeartsMargin/HeartsPanel/HBoxHearts"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_l5owu")
expand_mode = 4

[node name="Heart1" type="TextureRect" parent="HUD/Status/HBoxStatus/HeartsMargin/HeartsPanel/HBoxHearts"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_l5owu")
expand_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0

[node name="Pause" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentPanel" type="PanelContainer" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hjh2c")

[node name="MarginContainer" type="MarginContainer" parent="Pause/ContentPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/margin_left = 32

[node name="Actions" type="VBoxContainer" parent="Pause/ContentPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 25

[node name="Main Menu" parent="Pause/ContentPanel/MarginContainer/Actions" instance=ExtResource("7_eofyr")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Main Menu
"

[node name="Resume" parent="Pause/ContentPanel/MarginContainer/Actions" instance=ExtResource("7_eofyr")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Resume
"

[node name="Label" type="Label" parent="Pause/ContentPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("8_1kq2p")
theme_override_font_sizes/font_size = 128
text = "Paused"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SongsPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0dwhk")
}
playback_default_blend_time = 5.0
blend_times = [&"level1_song", &"main_theme", 5.0]

[node name="SFXPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_j4riv")
}
blend_times = [&"button_clicked", &"button_clicked", 1.0]

[node name="SongsMixer" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ri2wq")
anim_player = NodePath("../SongsPlayer")
parameters/conditions/is_level1 = false

[node name="MenuSFX" type="AudioStreamPlayer" parent="."]

[node name="Songs" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
bus = &"Songs"

[connection signal="pressed" from="Pause/ContentPanel/MarginContainer/Actions/Main Menu" to="." method="_on_main_menu_pressed"]

[editable path="MainMenu"]
